--- a/documents/proposal/stack.tex
+++ b/documents/proposal/stack.tex
@@ -1,8 +1,9 @@
 \begin{table}[H]
 \centering
-\begin{tabular}{|c|c|c|c|c|}
+\begin{tabular}{|c|c|c|c|}
 \hline
-\textbf{جنبه} & \textbf{راهکار اول} & \textbf{راهکار دوم} & \textbf{راهکار سوم} & \textbf{راهکار چهارم} \\
+\textbf{جنبه} & \textbf{راهکار اول} & \textbf{راهکار دوم} & \textbf{راهکار سوم} \\
 \hline
+
 \end{tabular}
 \end{table}
