changes in proposal

--- a/documents/proposal.tex
+++ b/documents/proposal.tex
@@ -1,34 +1,58 @@
-\documentclass[12pt]{article}
-\usepackage{times}
-\usepackage{url}
-\usepackage{latexsym}
-\usepackage{tabularx}
-\usepackage{graphicx}
-\graphicspath{ {images/} }
+\documentclass{article}
+\usepackage[a4paper, margin=1.9cm]{geometry}
 \usepackage{xepersian}
 
-%\setlength\titlebox{5cm}
-
-% You can expand the titlebox if you need extra space
-% to show all the authors. Please do not make the titlebox
-% smaller than 5cm (the original size); we will check this
-% in the camera‌ready version and ask you to change it back.
 
 
-\title{ تمرین معماری کامپیوتر\\سری اول}
+\title{به نام خدا\\پروپوزال سامانه پرداخت آنلاین ارزی}
+\author{علی عسگری\\ وحید بالازاده \\ امین خدائی}
 
-\author{علی عسگری
-\LTRfootnote{aliasgarikh@yahoo.com}
- \\
-دانشکده مهندسی کامپیوتر \\
-  {\tt aliasgarikh@yahoo.com} }
-
-\date{}
-
+\twocolumn 
 \begin{document}
 \maketitle
-
-\section{}
+\section{اهداف و توجیه}
+\subsection{مقدمه}
+\subsection{معرفی و بیان اهداف پروژه}
+\subsection{توجیه انجام پروژه}
+\section{معرفی و مفاد قرارداد}
+\subsection{مفاد قرارداد}
+\subsection{کارها و نیازمندی‌ها}
+\section{معرفی سیستم و توضیح تکنولوژی‌های مورد استفاده}
+\subsection{راهکارهای فنی پیشنهادی و ارزیابی راهکارها}
 \input{proposal/stack.tex}
+\subsection{انتخاب بهترین گزینه}
+
+با توجه به این که برای تیم ما دانش قبلی برای پیاده‌سازی سامانه بسیار مهم بود و با توجه به هزینه‌ها و موارد دیگر راهکار سوم انتخاب شد. در بخش‌های زیر به جزئیات راهکار مطرح شده اشاره میشود.\\
+\textbf{معماری انتخاب شده برای طراحی نرم‌افزار به صورت زیر است}:\\
+به منظور این که سامانه قابل انتقال \footnote{\lr{Portable}} و به راحتی قابل اعزام \footnote{\lr{Deployment}} باشد و عملکرد محیط توسعه و تست نرم افزار یکسان باشند، از تکنولوژی داکر استفاده میکنیم، به‌علاوه سامانه روی هر ماشینی که از داکر پشتایبانی کند، قابل راه‌اندازی خواهد بود.
+به دلایلی که در بخش (رفرنس به جدول تصمیم)‌ بیان شد، برای توسعه سامانه از فریمورک جنگو\footnote{\lr{Django Framework}}، سرور گونیکورن\footnote{\lr{Gunicorn}}، پایگاه داده‌ی پُستگره \footnote{\lr{Postgres Database}} و وب‌سرور انجین‌ایکس \footnote{\lr{Nginx}} استفاده خواهد شد.\\
+معماری فریمورک جنگو تقریبا مشابه معماری \lr{MVC} است و برای پیاده‌سازی برنامه کاربردی نیاز به طراحی تعدادی مدل وجود دارد. همچنین با استفاده از کد پایتون، جریان داده از کاربر به سیستم و بالعکس توصیف شده و در نهایت نحوه نمایش داده‌ها به کاربر طراحی می‌شود. این فریمورک به برنامه‌نویس اجازه می‌دهد تا بتواند از پلتفرم‌های مختلف رابط کاربری استفاده کند. با توجه به بخش () از فریمورک سمنتیک یو آی \footnote{\lr{Semantic UI}} برای پیاده‌سازی رابط کاربری تعاملی استفاده‌ خواهد شد.\\
+برای پرهیز از طراحی یکپارچه و چالش‌های آن و ایجاد امکان مهاجرت به معماری میکروسرویس \footnote{\lr{Microservice Architecture}} سامانه به چند زیرسامانه تقسیم شد که توضیح مختصری برای هرکدام در زیر آمده است:
+\begin{itemize}
+\item
+\lr{Authorization}: در این زیرسامانه اطلاعات کاربران و دسترسی‌های آنان نگهداری و پردازش می‌شود،
+\item
+\lr{Management}:‌در این زیرسامانه قابلیت‌ها و امکانات مدیریتی سامانه برای مدیر آن پیاده‌سازی‌ می‌شود،
+\item
+\lr{Finance}: در این زیرسامانه اطلاعات حساب‌های مالی و تراکنش‌ها نگهداری و پردازش می‌شوند،
+\item
+\lr{Workflow}:‌در این سامانه درخواست‌های کاربران و روند کارشان از دریافت درخواست تا انجام یا تغییر وضعیت آن توسط کارمندان به انجام می‌رسد. 
+\end{itemize}
+در شکل زیر، خلاصه معماری موردنظر آمده است:\\
+\textbf{توصیف جریان داده به شرح زیر است}:\\
+همان‌ طور که بیان شد سامانه بر پایه وب خواهد بود و کاربران با استفاده از مرورگر به سامانه متصل می‌شوند و درخواست‌‌ها و کارهایشان را به انجام می‌رسانند. در اینجا مقصود از کاربران همه افراد استفاده‌کننده از سیستم اعم از مدیر، کارمندان و مشتری می‌باشد.\\
+برای همه انواع کاربران ابتدا صفحه اولیه سایت نشان داده‌ می‌شود و کاربران ابتدا از طریق گزینه ثبت نام، در سایت ثبت نام کرده و سپس با استفاده از قسمت ورود، وارد محیط کاربری خود می‌شوند. سپس  هر کدام از درخواستها و یا کارهایی را که به آن دسترس دارند را انجام می‌دهند که شامل جست‌و‌جو در سایت با کلیک روی لینک‌ها و یا دادن اطلاعات به سایت از طریق فرم‌هاست. همچنین نتیجه عملیات کاربران در پی عملیاتشان به آن‌ها نمایش داده‌ می‌شود. از ابتدای یک درخواست مرورگر کاربر بر بستر HTTP درخواستی را شکل می‌دهد و به سامانه ارسال می‌کند. سپس وب‌سرور انجین‌ایکس که در نقش پروکسی قرار دارد در خواست را دریافت کرده و به نحو مناسبی در اختیار سامانه  قرار می‌دهد. این درخواست ابتدا به انجین‌ایکس می‌رسد که عملیات رمزنگاری و توزیع بار را انجام می‌دهد، سپس به لایه‌ی \footnote{\lr{WSGI}} می‌رسد و کد پایتونیِ سایت توسط گونیکورن اجرا می‌شود. درخواست ابتدا از میان‌ابزار \footnote{\lr{Middleware}} های جنگو عبور می‌کند و با توجه به تنظیمات روتینگی که برای یو‌آرال‌های سایت انجام خواهد شد، یکی از توابع پایتونی‌، که پیاده‌سازی خواهیم کرد اجرا می‌شود و به درخواست، پاسخ مناسب می‌دهد. در این تابع در صورت لزوم ارتباط با پایگاه داده از طریق مدل‌ رابطه‌ای اشیای جنگو انجام می‌شود و منطق‌های مورد نیاز که در مدل‌های سایت پیاده‌سازی شده‌اند فراخوانی می‌شوند. در این صورت یک یا چند درخواست به پایگاه داده ‌هم ارسال خواهدشد. \\
+برای تولید پاسخ درخواست، از امکان جنگو برای نمایش داده‌ها در قالب‌های رابط کاربری استفاده می‌شود. پس از این که پاسخ درخواست وب در تابع فراخوانی‌شده آماده و بازگردانده شد، جنگو پاسخ را از طریق گونیکورن در اختیار وب سرور قرار داده و وب‌سرور هم پاسخ کاربر را ارسال می‌کند و کاربر قادر خواهد بود نتیجه کار را در مرورگر خود مشاهده کند. ضمنا باید گفت هر کدام از سرویس‌های گونیکورن، پایگاه داده و انجین‌ایکس در کانتینرهای داکر اجرا‌ خواهند شد و ارتباط بینشان به طرزی نامرئی توسط شبکه داخل سرور انجام می‌شود.
+
+\section{نحوه پوشش نیازمندی‌های کارکردی و غیرکارکردی:}
+\section{برآورد زمانی}
+\section{برآورد مالی}
+\section{مراحل اجرای پروژه}
+\subsection{مراحل اجرای فازها}
+\subsection{هزینه زمانی(نفر-ساعت)}
+\subsection{هزینه مالی فازها}
+\section{معرفی اعضا و تقسیم کار در گروه}
+\subsection{معرفی تیم}
+\subsection{تقسیم وظایف}
 
 \end{document}
