--- a/documents/proposal/stack.tex
+++ b/documents/proposal/stack.tex
@@ -1,6 +1,6 @@
 \begin{table}[h!]
 \centering
-\resizebox{\textwidth}{!}{
+\resizebox{.5\textwidth}{.7in}{
 \begin{tabular}{|c|c|c|c|c|}
 \hline
 \textbf{جنبه} & \textbf{راهکار اول} & \textbf{راهکار دوم} & \textbf{راهکار سوم} & \textbf{راهکار چهارم} \\
@@ -30,4 +30,3 @@
 \end{tabular}
 }
 \end{table}
-با توجه به این که برای تیم ما دانش قبلی برای پیاده‌سازی سامانه بسیار مهم بود و با توجه به هزینه‌ها و موارد دیگر راهکار سوم را انتخاب شد.
