Add time and cost estimation.

--- a/documents/proposal.tex
+++ b/documents/proposal.tex
@@ -45,8 +45,8 @@
 برای تولید پاسخ درخواست، از امکان جنگو برای نمایش داده‌ها در قالب‌های رابط کاربری استفاده می‌شود. پس از این که پاسخ درخواست وب در تابع فراخوانی‌شده آماده و بازگردانده شد، جنگو پاسخ را از طریق گونیکورن در اختیار وب سرور قرار داده و وب‌سرور هم پاسخ کاربر را ارسال می‌کند و کاربر قادر خواهد بود نتیجه کار را در مرورگر خود مشاهده کند. ضمنا باید گفت هر کدام از سرویس‌های گونیکورن، پایگاه داده و انجین‌ایکس در کانتینرهای داکر اجرا‌ خواهند شد و ارتباط بینشان به طرزی نامرئی توسط شبکه داخل سرور انجام می‌شود.
 
 \section{نحوه پوشش نیازمندی‌های کارکردی و غیرکارکردی:}
-\section{برآورد زمانی}
-\section{برآورد مالی}
+\section{برآورد زمانی و مالی}
+‌\input{proposal/estimation.tex}
 \section{مراحل اجرای پروژه}
 \subsection{مراحل اجرای فازها}
 \subsection{هزینه زمانی(نفر-ساعت)}
