--- a/documents/proposal.tex
+++ b/documents/proposal.tex
@@ -1,4 +1,18 @@
 \documentclass{article}
+\usepackage{amsmath}
+\usepackage{siunitx}
+\usepackage{tikz}
+\usepackage{graphicx}
+\usepackage{mathpazo}
+\usepackage[normalem]{ulem}
+\usetikzlibrary{shapes, arrows}
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=cyan,
+}
 \usepackage[a4paper, margin=1.9cm]{geometry}
 \usepackage{xepersian}
 
@@ -7,7 +21,6 @@
 \title{به نام خدا\\پروپوزال سامانه پرداخت آنلاین ارزی}
 \author{علی عسگری\\ وحید بالازاده \\ امین خدائی}
 
-\twocolumn 
 \begin{document}
 \maketitle
 \section{اهداف و توجیه}
