--- a/documents/proposal/estimation.tex
+++ b/documents/proposal/estimation.tex
@@ -2,7 +2,7 @@
 با توجه به بازار موجود و پرس و جوی میدانی به دانشجویان کارشناسی که وب توسعه می‌دهند ساعتی 20 هزار تومان دستمزد تعلق می‌گیرد. همچنین هزینه‌ها بر اساس ریال بیان شده‌است. همچنین برای تخمین زمان پیاده‌سازی از ضریب اطمینان 4 استفاده شده‌است.
 \begin{table}[h!]
 \centering
-\resizebox{.5\textwidth}{.7in}{
+\resizebox{\textwidth}{!}{
 \begin{tabular}{|c|c|c|c|}
 \hline
 \textbf{بخش} & \textbf{نفرساعت} & \textbf{نرخ} & \textbf{مجموع} \\
