--- a/documents/proposal/stack.tex
+++ b/documents/proposal/stack.tex
@@ -1,6 +1,6 @@
 \begin{table}[h!]
 \centering
-\resizebox{.5\textwidth}{.7in}{
+\resizebox{\textwidth}{!}{
 \begin{tabular}{|c|c|c|c|c|}
 \hline
 \textbf{جنبه} & \textbf{راهکار اول} & \textbf{راهکار دوم} & \textbf{راهکار سوم} & \textbf{راهکار چهارم} \\
