Add annual costs.

--- a/documents/proposal/estimation.tex
+++ b/documents/proposal/estimation.tex
@@ -1,5 +1,5 @@
-\subsection* {تخمین زمانی و هزینه پرسنل}
-با توجه به بازار موجود و پرس و جوی میدانی به دانشجویان کارشناسی که وب توسعه می‌دهند ساعتی 20 هزار تومان دستمزد تعلق می‌گیرد. همچنین هزینه‌ها بر اساس ریال بیان شده‌است. همچنین برای تخمین زمان پیاده‌سازی از ضریب اطمینان 4 استفاده شده‌است.
+\subsection* {تخمین هزینه‌های توسعه، هزینه پرسنل}
+با توجه به بازار موجود و پرس و جوی میدانی به دانشجویان کارشناسی که وب توسعه می‌دهند ساعتی 20 هزار تومان دستمزد تعلق می‌گیرد. همچنین هزینه‌ها بر اساس ریال بیان شده‌است. همچنین برای تخمین زمان پیاده‌سازی از ضریب اطمینان 4 استفاده شده‌است. با توجه به این که توسعه‌دهندگان از رایانه شخصی استفاده می‌کنند هزینه‌ای غیر از هزینه پرسنل برای هزینه‌های توسعه نداریم. 
 \begin{table}[h!]
 \centering
 \resizebox{.5\textwidth}{.7in}{
@@ -25,3 +25,5 @@
 \end{tabular}
 }
 \end{table}
+\subsection* {تخمین هزینه‌های سالانه}
+هزینه‌های سالانه محدود هستند. سامانه‌ای که توسط ما طراحی می‌شود قابل پیاده‌سازی روی یک سرور که هزینه سالانه تقریبی آن 2000000 ریال است خواهدبود. همچنین درگاه پرداخت و سرویس‌هایی که از آن استفاده می‌کنیم به طور رایگان توسط سازمان کارفرما در اختیار ما قرار گرفته است. با توجه به این که حدود پروژه روی سامانه نرم افزاری تعیین شده‌است از تخمین هزینه کارمندان و مدیر بحث نمی‌کنیم.
