--- a/documents/proposal.tex
+++ b/documents/proposal.tex
@@ -212,17 +212,15 @@
 در شکل زیر، خلاصه معماری موردنظر آمده است:\\
 \textbf{توصیف جریان داده به شرح زیر است}:\\
 همان‌ طور که بیان شد سامانه بر پایه وب خواهد بود و کاربران با استفاده از مرورگر به سامانه متصل می‌شوند و درخواست‌‌ها و کارهایشان را به انجام می‌رسانند. در اینجا مقصود از کاربران همه افراد استفاده‌کننده از سیستم اعم از مدیر، کارمندان و مشتری می‌باشد.\\
-برای همه انواع کاربران ابتدا صفحه اولیه سایت نشان داده‌ می‌شود و کاربران ابتدا از طریق گزینه ثبت نام، در سایت ثبت نام کرده و سپس با استفاده از قسمت ورود، وارد محیط کاربری خود می‌شوند. سپس  هر کدام از درخواستها و یا کارهایی را که به آن دسترس دارند را انجام می‌دهند که شامل جست‌و‌جو در سایت با کلیک روی لینک‌ها و یا دادن اطلاعات به سایت از طریق فرم‌هاست. همچنین نتیجه عملیات کاربران در پی عملیاتشان به آن‌ها نمایش داده‌ می‌شود. از ابتدای یک درخواست مرورگر کاربر بر بستر HTTP درخواستی را شکل می‌دهد و به سامانه ارسال می‌کند. سپس وب‌سرور انجین‌ایکس که در نقش پروکسی قرار دارد در خواست را دریافت کرده و به نحو مناسبی در اختیار سامانه  قرار می‌دهد. این درخواست ابتدا به انجین‌ایکس می‌رسد که عملیات رمزنگاری و توزیع بار را انجام می‌دهد، سپس به لایه‌ی \footnote{\lr{WSGI}} می‌رسد و کد پایتونیِ سایت توسط گونیکورن اجرا می‌شود. درخواست ابتدا از میان‌ابزار \footnote{\lr{Middleware}} های جنگو عبور می‌کند و با توجه به تنظیمات روتینگی که برای یو‌آرال‌های سایت انجام خواهد شد، یکی از توابع پایتونی‌، که پیاده‌سازی خواهیم کرد اجرا می‌شود و به درخواست، پاسخ مناسب می‌دهد. در این تابع در صورت لزوم ارتباط با پایگاه داده از طریق مدل‌ رابطه‌ای اشیای جنگو انجام می‌شود و منطق‌های مورد نیاز که در مدل‌های سایت پیاده‌سازی شده‌اند فراخوانی می‌شوند. در این صورت یک یا چند درخواست به پایگاه داده ‌هم ارسال خواهدشد. \\
+برای همه انواع کاربران ابتدا صفحه اولیه سایت نشان داده‌ می‌شود و کاربران ابتدا از طریق گزینه ثبت نام، در سایت ثبت نام کرده و سپس با استفاده از قسمت ورود، وارد محیط کاربری خود می‌شوند. سپس  هر کدام از درخواستها و یا کارهایی را که به آن دسترس دارند را انجام می‌دهند که شامل جست‌و‌جو در سایت با کلیک روی لینک‌ها و یا دادن اطلاعات به سایت از طریق فرم‌هاست. همچنین نتیجه عملیات کاربران در پی عملیاتشان به آن‌ها نمایش داده‌ می‌شود. از ابتدای یک درخواست مرورگر کاربر بر بستر HTTP درخواستی را شکل می‌دهد و به سامانه ارسال می‌کند. سپس وب‌سرور انجین‌ایکس که در نقش پروکسی قرار دارد در خواست را دریافت کرده و به نحو مناسبی در اختیار سامانه  قرار می‌دهد. این درخواست ابتدا به انجین‌ایکس می‌رسد که عملیات رمزنگاری و توزیع بار را انجام می‌دهد، سپس به لایه‌ی {\lr{WSGI} می‌رسد و کد پایتونیِ سایت توسط گونیکورن اجرا می‌شود. درخواست ابتدا از میان‌ابزار \footnote{\lr{Middleware}} های جنگو عبور می‌کند و با توجه به تنظیمات روتینگی که برای یو‌آرال‌های سایت انجام خواهد شد، یکی از توابع پایتونی‌، که پیاده‌سازی خواهیم کرد اجرا می‌شود و به درخواست، پاسخ مناسب می‌دهد. در این تابع در صورت لزوم ارتباط با پایگاه داده از طریق مدل‌ رابطه‌ای اشیای جنگو انجام می‌شود و منطق‌های مورد نیاز که در مدل‌های سایت پیاده‌سازی شده‌اند فراخوانی می‌شوند. در این صورت یک یا چند درخواست به پایگاه داده ‌هم ارسال خواهدشد. \\
 برای تولید پاسخ درخواست، از امکان جنگو برای نمایش داده‌ها در قالب‌های رابط کاربری استفاده می‌شود. پس از این که پاسخ درخواست وب در تابع فراخوانی‌شده آماده و بازگردانده شد، جنگو پاسخ را از طریق گونیکورن در اختیار وب سرور قرار داده و وب‌سرور هم پاسخ کاربر را ارسال می‌کند و کاربر قادر خواهد بود نتیجه کار را در مرورگر خود مشاهده کند. ضمنا باید گفت هر کدام از سرویس‌های گونیکورن، پایگاه داده و انجین‌ایکس در کانتینرهای داکر اجرا‌ خواهند شد و ارتباط بینشان به طرزی نامرئی توسط شبکه داخل سرور انجام می‌شود.
 
-\section{برآورد زمانی و مالی}
-‌\input{proposal/estimation.tex}
+
 \section{نحوه پوشش نیازمندی‌های کارکردی و غیرکارکردی}
 \input{proposal/coverage.tex}
-\section{مراحل اجرای پروژه}
-\subsection{مراحل اجرای فازها}
-\subsection{هزینه زمانی(نفر-ساعت)}
-\subsection{هزینه مالی فازها}
+\newpage
+\section{مراحل اجرای فازها و برآورد زمانی و مالی کلی}
+‌\input{proposal/estimation.tex}
 \section{معرفی اعضا و تقسیم کار در گروه}
 \subsection{معرفی تیم}
 علی عسگری خشویه\\
@@ -243,7 +241,7 @@
 تلفن همراه: 09381137897\\
 رایانامه: \lr{balazadehvahid@gmail.com}
 \subsection{تقسیم وظایف}
-
+تیم فنی، که از هر سه عضو تشکیل شده و با مدیریت فنی آقای علی عسگری فعالیت می‌کند، مسئولیت پیاده‌سازی قسمت‌های زیرساخت، فرانت‌اند، بک‌اند و تضمین کیفیت و امینت را بر عهده دارد.
 \subsection{بیان نمرات اضافه}
 قابل انتقال و اعزام بودن نرم افزار با توجه به تکنولوژی‌ای که استفاده کرده‌ایم تضمین شده‌است و کافی است رایانه مقصد از تکنولوژی داکر ورژن پیاده‌سازی ما پشتیبانی کند. برای این قسمت انتظار میرود نمره اضافه به اندازه 20 درصد از نمره کل پروژه در نظر گرفته شود.
 
