Refactor project structure

--- a/documents/proposal/proposal.tex
+++ b/documents/proposal/proposal.tex
@@ -190,7 +190,7 @@
 \section{معرفی سیستم و توضیح تکنولوژی‌های مورد استفاده}
 \subsection{راهکارهای فنی پیشنهادی و ارزیابی راهکارها}
 رجوع شود به جدول.
-\input{proposal/stack.tex}
+\input{stack.tex}
 \subsection{انتخاب بهترین گزینه}
 
 با توجه به این که برای تیم ما دانش قبلی برای پیاده‌سازی سامانه بسیار مهم بود و با توجه به هزینه‌ها و موارد دیگر راهکار سوم انتخاب شد. در بخش‌های زیر به جزئیات راهکار مطرح شده اشاره میشود.\\
@@ -217,10 +217,10 @@
 
 
 \section{نحوه پوشش نیازمندی‌های کارکردی و غیرکارکردی}
-\input{proposal/coverage.tex}
+\input{coverage.tex}
 \newpage
 \section{مراحل اجرای فازها و برآورد زمانی و مالی کلی}
-‌\input{proposal/estimation.tex}
+‌\input{estimation.tex}
 \section{معرفی اعضا و تقسیم کار در گروه}
 \subsection{معرفی تیم}
 علی عسگری خشویه\\
