alternative signup tests

--- a/documents/design/use_case/usecases.tex
+++ b/documents/design/use_case/usecases.tex
@@ -110,36 +110,43 @@ System shows that new user with given data has been created
 2-3
 \begin{enumerate}[label=(\alph*)]
 \item
+Incomplete data:
 \begin{enumerate}[label=(\arabic*)]
 \item
 User fills fields of form incompeletly and submits
 \item
-System shows a label meaning incomplete data.
+System returns to signup page and shows a label meaning incomplete data.
 \end{enumerate}
 
 \item
+Incorrect input format:
 \begin{enumerate}[label=(\arabic*)]
 \item
 User fills fields of form completely with incorrect input formats and submits
 \item
-System shows a label meaning correct format of each field with format condition beside it.
+System returns to signup page and shows a label meaning correct format of each field with format condition beside it.
 \end{enumerate}
 
 \item
+Unmatched Passwords:
 \begin{enumerate}[label=(\arabic*)]
 \item
-User fills fields of form completely with incorrect input formats and submits
+User fills fields of form completely with different passwords
 \item
-System shows a label meaning correct format of each field with format condition beside it.
+System returns to signup page and shows a label meaning passwords are different.
 \end{enumerate}
 
 \item
+Username taken:
 \begin{enumerate}[label=(\arabic*)]
 \item
 User fills fields of form completely with correct input formats and taken username and submits
 \item
 System shows a label meaning that username is already taken.
 \end{enumerate}
+
+
+
 \end{enumerate}
 
 
