--- a/documents/design/use_case/sample_use_case.tex
+++ b/documents/design/use_case/sample_use_case.tex
@@ -169,7 +169,7 @@
 \item \textbf{کنشگر فرعی:}\\
 ندارد
 \item \textbf{شرایط اولیه:}\\
-کارمند وارد داشبورد ادمین شده باشد.؟؟
+کارمند وارد داشبورد کارمند شده باشد.؟؟
 \item \textbf{روند اصلی:}\\
 \begin{enumerate}
 \item در صورتی که مورد کاربردی با درخواست مدیر در «ایجاد تراکنش معتبر دلخواه» شروع شود: 
@@ -235,4 +235,106 @@
 
 
 \noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+ثبت نام در آزمون های بین المللی
+\item \textbf{شناسه:}\\
+8
+\item \textbf{توضیح اجمالی:}\\
+درخواست مشتری برای ثبت نام در آزمون انتخابی، در سامانه ثبت میشود.
+\item \textbf{کنشگر اصلی:}\\
+مشتری
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+مشتری وارد داشبورد شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست مشتری برای ثبت درخواست جدید شروع میشود.
+\item سامانه صفحه درخواست جدید را به مشتری نشان میدهد.
+\item مشتری نوع آزمون مورد نظر را انتخاب میکند.
+\item سامانه اطلاعات موردنیاز برای ثبت نام را به مشتری نمایش میدهد
+\item مشتری اطلاعات موردنیاز را وارد میکند(یا به صورت متن یا به صورت فایل)
+\item سامانه هزینه ثبت نام را به مشتری نمایش میدهد
+\item مشتری درخواست خود را ثبت میکند
+\item در صورتی که موجودی مشتری کمتر از هزینه ثبت نام باشد سامانه :
+\begin{enumerate}
+\item سامانه پیغام خطا میدهد و روند جایگزین ۱ انجام میشود. 
+\end{enumerate}
+
+\item در غیراینصورت	:
+\begin{enumerate}
+\item پیغام ثبت موفق تراکنش به مشتری نشان داده میشود.
+\item آدرس مربوط به کارمند مسئول بررسی درخواست به مشتری نمایش داده میشود.
+\item مورد کاربردی «تایید تراکنش» اجرا میشود.
+\end{enumerate}
+
+\end{enumerate}
+
+\item \textbf{شرایط پایانی:}\\ 
+در قسمت تراکنشهای مربوط به کارمند مسئول، تراکنش ایجاد شده در حالت در انتظار تایید اضافه شود.
+\item \textbf{روندهای جایگزین:}\\
+روند ۱:\\
+\begin{enumerate}
+\item پیغام ورود به کیف پول نمایش داده میشود.
+\item کاربر ورود به کیف پول را تایید میکند.
+\item مورد کاربردی «شارژ کیف پول » اجرا میشود.؟؟
+\end{enumerate}
+
+\end{itemize}
+
+
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+پرداخت شهریه یا هزینه فرم درخواست پذیرش دانشگاههای خارجی
+\item \textbf{شناسه:}\\
+9
+\item \textbf{توضیح اجمالی:}\\
+درخواست مشتری برای پراخت هزینه پذیرش دانشگاههای خارجی در سامانه ثبت میشود.
+\item \textbf{کنشگر اصلی:}\\
+مشتری
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+مشتری وارد داشبورد شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست مشتری برای ثبت درخواست جدید شروع میشود.
+\item سامانه صفحه درخواست جدید را به مشتری نشان میدهد.
+\item سامانه اطلاعات موردنیاز برای ثبت درخواست را به مشتری نمایش میدهد
+\item مشتری اطلاعات موردنیاز را وارد میکند(یا به صورت متن یا به صورت فایل)
+\item سامانه هزینه ثبت نام را به مشتری نمایش میدهد
+\item مشتری درخواست خود را ثبت میکند
+\item در صورتی که موجودی مشتری کمتر از هزینه ثبت نام باشد سامانه :
+\begin{enumerate}
+\item سامانه پیغام خطا میدهد و روند جایگزین ۱ انجام میشود. 
+\end{enumerate}
+
+\item در غیراینصورت	:
+\begin{enumerate}
+\item پیغام ثبت موفق تراکنش به مشتری نشان داده میشود.
+\item آدرس مربوط به کارمند مسئول بررسی درخواست به مشتری نمایش داده میشود.
+\item مورد کاربردی «تایید تراکنش» اجرا میشود.
+\end{enumerate}
+
+\end{enumerate}
+
+\item \textbf{شرایط پایانی:}\\ 
+در قسمت تراکنشهای مربوط به کارمند مسئول، تراکنش ایجاد شده در حالت در انتظار تایید اضافه شود.
+\item \textbf{روندهای جایگزین:}\\
+روند ۱:\\
+\begin{enumerate}
+\item پیغام ورود به کیف پول نمایش داده میشود.
+\item کاربر ورود به کیف پول را تایید میکند.
+\item مورد کاربردی «شارژ کیف پول » اجرا میشود.؟؟
+\end{enumerate}
+
+\end{itemize}
+
+
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
 \end{document}
