--- a/documents/design/use_case/sample_use_case.tex
+++ b/documents/design/use_case/sample_use_case.tex
@@ -131,11 +131,11 @@
 \noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
 \begin{itemize}
 \item \textbf{مورد کاربرد:}\\
-تغییر و بروزرسانی صفحه قوانین و نرخ کارمزدها
+تغییر و بروزرسانی صفحه قوانین
 \item \textbf{شناسه:}\\
 5
 \item \textbf{توضیح اجمالی:}\\
-صفحه قوانین و نرخ کارمزدها بروز میشود.
+صفحه قوانین بروز میشود.
 \item \textbf{کنشگر اصلی:}\\
 مدیر
 \item \textbf{کنشگر فرعی:}\\
@@ -146,8 +146,8 @@
 \begin{enumerate}
 \item  این مورد کاربرد با درخواست مدیر برای ایجاد تغییر در صفحه قوانین شروع میشود.
 \item سامانه صفحه  ایجاد تغییر قوانین را به مدیر نشان میدهد.
-\item مدیر نرخ کارمزدها، کف و سقف مبلغ تراکنشها و توضیحات مربوط به قوانین سایت را تغییر میدهد.
-\item پیغام بروزرسانی موفق قوانین و نرخ کارمزدها به مدیر نشان داده میشود.
+\item مدیر کف و سقف مبلغ تراکنشها و توضیحات مربوط به قوانین سایت را تغییر میدهد.
+\item پیغام بروزرسانی موفق قوانین به مدیر نشان داده میشود.
 \end{enumerate}
 \item \textbf{شرایط پایانی:}\\ 
 نرخ کارمزدها یا قوانین یا سقف و کف مبلغ تراکنشها تغییر میکند و صفحه قوانین بروز میشود.
@@ -209,7 +209,7 @@
 \begin{enumerate}
 \item  این مورد کاربرد با درخواست مدیر برای ایجاد یک تراکنش جدید شروع میشود.
 \item سامانه صفحه ایجاد تراکنش جدید را به مدیر نشان میدهد.
-\item مدیر عنوان تراکنش، مقدار هزینه آن، واحد پولی و اطلاعات موردنیاز را وارد میکند.
+\item مدیر عنوان تراکنش، مقدار هزینه آن، واحد پولی و کارمزد تراکنش و اطلاعات موردنیاز را وارد میکند.
 \item در صورتی که این تراکنش از قبل در سامانه باشد:
 \begin{enumerate}
 \item سامانه پیغام خطا میدهد و به قسمت ۳ برمیگردد. 
@@ -267,7 +267,7 @@
 \begin{enumerate}
 \item پیغام ثبت موفق تراکنش به مشتری نشان داده میشود.
 \item آدرس مربوط به کارمند مسئول بررسی درخواست به مشتری نمایش داده میشود.
-\item مورد کاربردی «تایید تراکنش» اجرا میشود.
+\item مورد کاربردی «بررسی تراکنش» اجرا میشود.
 \end{enumerate}
 
 \end{enumerate}
@@ -317,7 +317,7 @@
 \begin{enumerate}
 \item پیغام ثبت موفق تراکنش به مشتری نشان داده میشود.
 \item آدرس مربوط به کارمند مسئول بررسی درخواست به مشتری نمایش داده میشود.
-\item مورد کاربردی «تایید تراکنش» اجرا میشود.
+\item مورد کاربردی «بررسی تراکنش» اجرا میشود.
 \end{enumerate}
 
 \end{enumerate}
@@ -331,6 +331,64 @@
 \item کاربر ورود به کیف پول را تایید میکند.
 \item مورد کاربردی «شارژ کیف پول » اجرا میشود.؟؟
 \end{enumerate}
+
+\end{itemize}
+
+
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+بررسی تراکنش
+\item \textbf{شناسه:}\\
+10
+\item \textbf{توضیح اجمالی:}\\
+کارمند درخواستهای دریافتی از مشتری ها را بررسی میکند.
+\item \textbf{کنشگر اصلی:}\\
+کارمند
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+کارمند وارد داشبورد کارمند شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست کارمند برای بررسی درخواست جدید شروع میشود.
+\item سامانه صفحه بررسی درخواست جدید را به کارمند نشان میدهد.
+\item کارمند یکی از درخواست ها را انتخاب میکند.
+\item در صورتی که وضعیت درخواست درانتظار تایید نباشد:
+\begin{enumerate}
+\item در همان صفحه میماند و وارد وضعیت ۳ میشود.
+\end{enumerate}
+\item در غیر این صورت:
+\begin{enumerate}
+\item سامانه صفحه مربوط به اطلاعات درخواست مشتری را به کارمند نشان میدهد.
+\item کارمند اطلاعات مشتری را بررسی میکند.
+\item در صورت صحت اطلاعات:
+\begin{enumerate}
+\item کارمند وضعیت درخواست را به درحال رسیدگی تغییر میدهد.
+\item هزینه تراکنش و کارمزد آن محاسبه میشود
+\item هزینه محاسبه شده از حساب ریالی مشتری کم شده و به حساب ریالی شرکت اضافه میشود
+\item کارمند پیغام مربوط به نوتیفیکیشن را وارد میکند
+\item کارمند ارسال نوتیفیکیشن را تایید میکند
+\item مورد کاربردی  «ارسال نوتیفیکیشن» انجام میشود.
+\end{enumerate}
+\item در غیر اینصورت:
+\begin{enumerate}
+\item  در صورتی که کارمند مورد غیر عادی متوجه شود وضعیت تراکنش را غیرعادی میکند.
+\item در غیر این صورت وضعیت تراکنش را لغوشده اعلام میکند.
+\item کارمند پیغام مربوط به نوتیفیکیشن را وارد میکند
+\item کارمند ارسال نوتیفیکیشن را تایید میکند
+\item مورد کاربردی  «ارسال نوتیفیکیشن» انجام میشود.
+\end{enumerate}
+\end{enumerate}
+
+\end{enumerate}
+
+\item \textbf{شرایط پایانی:}\\ 
+در قسمت تراکنشهای مربوط به مشتری، تراکنش درخواستی در وضعیت تایید باشد.\\
+مقدار هزینه انجام تراکنش از حساب مشتری کم شده و به حساب ریالی شرکت اضافه شده باشد.\\
+\item \textbf{روندهای جایگزین:}\\
+
 
 \end{itemize}
 
