--- a/documents/design/use_case/sample_use_case.tex
+++ b/documents/design/use_case/sample_use_case.tex
@@ -150,7 +150,7 @@
 \item پیغام بروزرسانی موفق قوانین به مدیر نشان داده میشود.
 \end{enumerate}
 \item \textbf{شرایط پایانی:}\\ 
-نرخ کارمزدها یا قوانین یا سقف و کف مبلغ تراکنشها تغییر میکند و صفحه قوانین بروز میشود.
+قوانین یا سقف و کف مبلغ تراکنشها تغییر میکند و صفحه قوانین بروز میشود.
 \item \textbf{روندهای جایگزین:}\\
 ندارد
 \end{itemize}
@@ -159,29 +159,22 @@
 
 \begin{itemize}
 \item \textbf{مورد کاربرد:}\\
-ارسال نوتفیکیشن
+ارسال نوتفیکیشن مدیر
 \item \textbf{شناسه:}\\
 6
 \item \textbf{توضیح اجمالی:}\\
-برای اطلاع رسانی مشتری ها نوتیفیکیشن با استفاده از رایانامه یا پیامک ارسال میشود.
+برای اطلاع رسانی مشتری ها از امکانات جدید نوتیفیکیشن با استفاده از رایانامه یا پیامک ارسال میشود.
 \item \textbf{کنشگر اصلی:}\\
-کارمند
+مدیر
 \item \textbf{کنشگر فرعی:}\\
 ندارد
 \item \textbf{شرایط اولیه:}\\
-کارمند وارد داشبورد کارمند شده باشد.؟؟
+مدیر وارد داشبورد مدیر شده باشد.
 \item \textbf{روند اصلی:}\\
 \begin{enumerate}
-\item در صورتی که مورد کاربردی با درخواست مدیر در «ایجاد تراکنش معتبر دلخواه» شروع شود: 
-\begin{enumerate}
+\item مورد کاربردی با درخواست مدیر در «ایجاد تراکنش معتبر دلخواه» شروع میشود: 
 \item پیغام نوتیفیکیشن برابر با پیغام وارد شده توسط مدیر میشود.
 \item تمام مشتری ها به عنوان مشتری مقصد انتخاب میشوند.
-\end{enumerate}
-\item در صورتی که مورد کاربردی با درخواست کارمند در «تایید تراکنش» شروع شود
-\begin{enumerate}
-\item پیغام نوتیفیکیشن برابر با پیغام وارد شده توسط کارمند میشود.
-\item مشتری مقصد برابر با مشتری در مورد کاربردی «تایید تراکنش» میشود.
-\end{enumerate}
 \item با توجه به شیوه اطلاع رسانی ثبت شده توسط هر کدام از مشتری های مقصد پیغام مربوطه به آنها ارسال میشود.
 \end{enumerate}
 
@@ -194,9 +187,37 @@
 
 \begin{itemize}
 \item \textbf{مورد کاربرد:}\\
-ایجاد تراکنش معتبر دلخواه
+ارسال نوتفیکیشن کارمند
 \item \textbf{شناسه:}\\
 7
+\item \textbf{توضیح اجمالی:}\\
+برای اطلاع رسانی مشتری ها از وضعیت درخواستشان نوتیفیکیشن با استفاده از رایانامه یا پیامک ارسال میشود.
+\item \textbf{کنشگر اصلی:}\\
+کارمند
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+کارمند وارد داشبورد کارمند شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item مورد کاربردی با درخواست کارمند در «بررسی تراکنش» یا «تایید تراکنش» شروع میشود
+\item پیغام نوتیفیکیشن برابر با پیغام وارد شده توسط کارمند میشود.
+\item مشتری مقصد برابر با مشتری در مورد کاربردی «بررسی تراکنش» یا «تایید تراکنش» میشود.
+\item با توجه به شیوه اطلاع رسانی ثبت شده توسط مشتری مقصد پیغام مربوطه ارسال میشود.
+\end{enumerate}
+
+\item \textbf{شرایط پایانی:}\\ 
+مشتری مقصد پیغام را از طریق روش اطلاع رسانی مشخص شده دریافت کند.
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+ایجاد تراکنش معتبر دلخواه
+\item \textbf{شناسه:}\\
+8
 \item \textbf{توضیح اجمالی:}\\
 یک تراکنش دلخواه توسط مدیر تعریف میشود.
 \item \textbf{کنشگر اصلی:}\\
@@ -222,7 +243,7 @@
 \item  درصورتی که مدیر گزینه ارسال نوتیفیکیشن را انتخاب کند:
 \begin{enumerate}
 \item مدیر پیام نوتیفیکیشن را وارد کرده و تایید میکند.
-\item مورد کابردی «ارسال نوتیفیکیشن» انجام میشود.
+\item مورد کابردی «ارسال نوتیفیکیشن مدیر» انجام میشود.
 \end{enumerate}
 \item سامانه پیغام ایجاد موفق تراکنش را نشان میدهد.
 \end{enumerate}
@@ -240,7 +261,7 @@
 \item \textbf{مورد کاربرد:}\\
 ثبت نام در آزمون های بین المللی
 \item \textbf{شناسه:}\\
-8
+9
 \item \textbf{توضیح اجمالی:}\\
 درخواست مشتری برای ثبت نام در آزمون انتخابی، در سامانه ثبت میشود.
 \item \textbf{کنشگر اصلی:}\\
@@ -291,7 +312,7 @@
 \item \textbf{مورد کاربرد:}\\
 پرداخت شهریه یا هزینه فرم درخواست پذیرش دانشگاههای خارجی
 \item \textbf{شناسه:}\\
-9
+10
 \item \textbf{توضیح اجمالی:}\\
 درخواست مشتری برای پراخت هزینه پذیرش دانشگاههای خارجی در سامانه ثبت میشود.
 \item \textbf{کنشگر اصلی:}\\
@@ -341,7 +362,7 @@
 \item \textbf{مورد کاربرد:}\\
 بررسی تراکنش
 \item \textbf{شناسه:}\\
-10
+11
 \item \textbf{توضیح اجمالی:}\\
 کارمند درخواستهای دریافتی از مشتری ها را بررسی میکند.
 \item \textbf{کنشگر اصلی:}\\
@@ -370,7 +391,7 @@
 \item هزینه محاسبه شده از حساب ریالی مشتری کم شده و به حساب ریالی شرکت اضافه میشود
 \item کارمند پیغام مربوط به نوتیفیکیشن را وارد میکند
 \item کارمند ارسال نوتیفیکیشن را تایید میکند
-\item مورد کاربردی  «ارسال نوتیفیکیشن» انجام میشود.
+\item مورد کاربردی  «ارسال نوتیفیکیشن کارمند» انجام میشود.
 \end{enumerate}
 \item در غیر اینصورت:
 \begin{enumerate}
@@ -378,7 +399,7 @@
 \item در غیر این صورت وضعیت تراکنش را لغوشده اعلام میکند.
 \item کارمند پیغام مربوط به نوتیفیکیشن را وارد میکند
 \item کارمند ارسال نوتیفیکیشن را تایید میکند
-\item مورد کاربردی  «ارسال نوتیفیکیشن» انجام میشود.
+\item مورد کاربردی  «ارسال نوتیفیکیشن کارمند» انجام میشود.
 \end{enumerate}
 \end{enumerate}
 
@@ -392,7 +413,38 @@
 
 \end{itemize}
 
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+زمانبندی انجام تراکنشها
+\item \textbf{شناسه:}\\
+12
+\item \textbf{توضیح اجمالی:}\\
+تمام درخواستها بررسی میشوند و هر درخواستی که از مهلت آن بیش از 24 ساعت گذشته باشد لغو میشود.
+\item \textbf{کنشگر اصلی:}\\
+زمان
+\item \textbf{کنشگر فرعی:}\\
+کارمند
+\item \textbf{شرایط اولیه:}\\
+ندارد
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item در دوره های زمانی منظم اجرا میشود.
+\item سامانه تمام درخواست های ثبت شده را مشاهده میکند
+\item هر درخواستی که از زمان شروع آن بیش از 24 ساعت گذشته باشد و جزو درخواستهای تایید نشده باشد به وضعیت لغو در می آید
+\item  با توجه به شیوه اطلاع رسانی ثبت شده توسط مشتریهای مربوط به درخواستهای لغو شده پیغام لغو تراکنش برای آنها ارسال میشود.
+
+\end{enumerate}
+
+\item \textbf{شرایط پایانی:}\\ 
+وضعیت درخواستهای مشتریانی(و نیز درخواستهای مربوطه در قسمت کارمندان) که بیش از 24 ساعت از آن گذشته و تایید نشده اند به حالت لغو در می آید.\\
+\item \textbf{روندهای جایگزین:}\\
+
+\end{itemize}
 
 \noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+
 
 \end{document}
