use cases updated and RFP doc added

--- a/documents/design/use_case/sample_use_case.tex
+++ b/documents/design/use_case/sample_use_case.tex
@@ -300,7 +300,7 @@
 \begin{enumerate}
 \item پیغام ورود به کیف پول نمایش داده میشود.
 \item کاربر ورود به کیف پول را تایید میکند.
-\item مورد کاربردی «شارژ کیف پول » اجرا میشود.؟؟
+\item مورد کاربردی «افزایش اعتبار ریالی کیف پول» اجرا میشود.؟؟
 \end{enumerate}
 
 \end{itemize}
@@ -310,7 +310,7 @@
 
 \begin{itemize}
 \item \textbf{مورد کاربرد:}\\
-پرداخت شهریه یا هزینه فرم درخواست پذیرش دانشگاههای خارجی
+پرداخت شهریه یا هزینه فرم درخواست پذیرش دانشگاههای خارجی و یا انجام تراکنش های تعریف شده توسط مدیر
 \item \textbf{شناسه:}\\
 10
 \item \textbf{توضیح اجمالی:}\\
@@ -350,7 +350,7 @@
 \begin{enumerate}
 \item پیغام ورود به کیف پول نمایش داده میشود.
 \item کاربر ورود به کیف پول را تایید میکند.
-\item مورد کاربردی «شارژ کیف پول » اجرا میشود.؟؟
+\item مورد کاربردی «افزایش اعتبار ریالی پول » اجرا میشود.؟؟
 \end{enumerate}
 
 \end{itemize}
@@ -445,6 +445,219 @@
 
 \noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
 
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+ثبت نام
+\item \textbf{شناسه:}\\
+13
+\item \textbf{توضیح اجمالی:}\\
+کاربر در سایت ثبت نام میکند.
+\item \textbf{کنشگر اصلی:}\\
+کارمند
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+ندارد
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست کاربر برای مشاهده ی صفحه ثبت نام به کاربر شروع میشود
+\item سامانه صفحه ثبت نام را به کاربر نمایش میدهد
+\item کاربر قسمتهای نام و نام خانوادگی، نام کاربری، شماره تماس، ایمیل، رمز عبور و تکرار رمز عبور را پر میکند.
+\item کاربر گزینه ثبت نام را انتخاب میکند
+\item در صورتی که هر کدام از قسمتهای ذکر شده در ۳ خالی بماند، سیستم پیام «اطلاعات ناقص» را نمایش میدهد و به ۳ میرود.
+\item  در صورتی که ایمیل فرمت اشتباه داشته باشد سیستم پیام «ایمیل اشتباه» میدهد و به ۳ برمیگردد
+\item در صورتی که رمز عبور و تکرار رمز عبور یکی نباشند سیستم پیام «عدم تطابق رمز عبور» میدهد و به ۳ برمیگردد.
+\item در صورتی که نام کاربری وارد شده از قبل در سامانه وجود داشته باشد، سیستم پیام «نام کاربری تکراری» میدهد و به ۳ برمیگردد
+\item در صورتی که ایمیل وارد شده از قبل در سامانه وجود داشته باشد، سیستم پیام «ایمیل تکراری» میدهد و به ۳ برمیگردد.
+\item در صورتی که موارد 5 تا9 رخ ندهد سیستم پیام «ثبت نام موفق» را به کاربر نمایش میدهد.
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+اطلاعات کاربر در (دیتابیس) سامانه به عنوان کاربر ذخیره شده باشد.
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+مشاهده و ویرایش اطلاعات
+\item \textbf{شناسه:}\\
+14
+\item \textbf{توضیح اجمالی:}\\
+کاربر اطلاعات خود را مشاهده کرده و میتواند اطلاعات خود را ویرایش کند.
+\item \textbf{کنشگر اصلی:}\\
+کارمند
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+کاربر وارد داشبورد کارمند(مشتری) شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست کاربر برای مشاهده اطلاعات در داشبورد شروع میشود
+\item سامانه صفحه  اطلاعات را به کاربر نمایش میدهد
+\item در صورتی که کاربر گزینه ویرایش اطلاعات را انتخاب کند:
+\begin{enumerate}
+\item صفحه ویرایش اطلاعات به کاربر نشان داده میشود.
+\item کاربر قسمت های نام یا نام خانوادگی یا شماره تماس یا ایمیل و یا رمز عبور و تکرار رمز عبور را تغییر میدهد.
+\item  در صورتی که ایمیل فرمت اشتباه داشته باشد سیستم پیام «ایمیل اشتباه» میدهد و به ۳.ب برمیگردد
+\item در صورتی که رمز عبور و تکرار رمز عبور یکی نباشند سیستم پیام «عدم تطابق رمز عبور» میدهد و به ۳.ب برمیگردد.
+\item در صورتی که ایمیل وارد شده از قبل در سامانه وجود داشته باشد، سیستم پیام «ایمیل تکراری» میدهد و به ۳.ب برمیگردد.
+\item در صورتی که موارد ۳.ج تا ۳.ه رخ ندهد سیستم پیام «تغییر اطلاعات موفق» را به کاربر نمایش میدهد.
+\end{enumerate}
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+در صورتی که کاربر اطلاعات خود را تغییر دهد، اطلاعات جدید کاربر در (دیتابیس) سامانه به عنوان کاربر ذخیره شده باشد.
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+مشاهده اعتبار هر ارز کیف پول
+\item \textbf{شناسه:}\\
+15
+\item \textbf{توضیح اجمالی:}\\
+کاربر مقدار اعتبار هر ارز مربوط به کیف پول خود را مشاهده میکند.
+\item \textbf{کنشگر اصلی:}\\
+کارمند
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+کاربر وارد داشبورد کارمند(مشتری) شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست کاربر برای مشاهده کیف پول در داشبورد شروع میشود
+\item سامانه صفحه  مربوط به کیف پول را به کاربر نمایش میدهد
+\item کاربر میتواند اعتبار هر کدام از ارزهای مربوط به کیف پول خود را مشاهده کند.
+
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
 
 
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+افزایش اعتبار ریالی کیف پول
+\item \textbf{شناسه:}\\
+16
+\item \textbf{توضیح اجمالی:}\\
+کاربر اعتبار ریالی کیف پول خود را افزایش میدهد.
+\item \textbf{کنشگر اصلی:}\\
+کارمند
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+کاربر وارد داشبورد کارمند(مشتری) شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست کاربر برای مشاهده کیف پول در داشبورد شروع میشود
+\item سامانه صفحه  کیف پول را به کاربر نمایش میدهد
+\item کاربر گزینه افزایش اعتبار ریالی کیف پول را انتخاب میکند.
+\item کاربر مبلغ مورد نظر را بر حسب ریال وارد میکند.
+\item کاربر تایید را انتخاب میکند.
+\item سیستم پیام «افزایش اعتبار ریالی موفق» را به کاربر نمایش میدهد.
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+در (دیتابیس) سامانه مقدار اعتبار ریالی مربوط به کاربر طبق مقدار اضافه شده افزایش یابد.
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+تبدیل ارزی
+\item \textbf{شناسه:}\\
+17
+\item \textbf{توضیح اجمالی:}\\
+کاربر میتواند مقداری از موجودی ارزی خود را به ارز دیگری تبدیل کند.
+\item \textbf{کنشگر اصلی:}\\
+مشتری
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+کاربر وارد داشبورد مشتری شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست کاربر برای مشاهده کیف پول در داشبورد شروع میشود
+\item سامانه صفحه  کیف پول را به کاربر نمایش میدهد
+\item کاربر گزینه  تبدیل ارزی را انتخاب میکند
+\item  کاربر ارز مبدا، مقصد و مقدار دلخواه برای تبدیل را وارد میکند و تایید میکند.
+\item در صورتی که مقدار ورودی صحیح باشد:
+\begin{enumerate}
+\item سامانه با توجه به نرخ لحظه ای ارز و مقدار کارمزد مقدار تبدیل شده صحیح را با توجه به ارز مقصد به مشتری نشان میدهد.  
+\item در صورتی که کاربر تایید کند:
+\item مقدار مورد نظر از حساب ارزی مبدا برداشت و به حساب ارزی مقصد واریز میشود.
+\end{enumerate}
+\item در غیر اینصورت:
+\begin{enumerate}
+\item  سامانه پیغام خطایی مبنی بر نادرست بودن مقدار ورودی به مشتری میدهد و به قسمت ۴ برمیگردد.
+\end{enumerate}
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+در (دیتابیس) سامانه از مقدار ارزی مبدا مربوط به کاربر کاسته و به مقدار ارزی مقصد مربوط به کاربر اضافه شده باشد.
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+مشاهده تاریخچه تراکنش ها و جزییات کامل هر تراکنش
+\item \textbf{شناسه:}\\
+18
+\item \textbf{توضیح اجمالی:}\\
+کاربر تاریخچه تراکنشها و جزییات هر کدام از آنها را مشاهده کند.
+\item \textbf{کنشگر اصلی:}\\
+مشتری
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+کاربر وارد داشبورد مشتری شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست کاربر برای مشاهده تاریخچه تراکنشها در داشبورد شروع میشود
+\item سامانه صفحه  تاریخچه تراکنشها را به کاربر نمایش میدهد
+\item کاربر لاگ مربوط به تراکنشها را مشاهده میکند.
+\item  در صورتی که کاربر قسمت جزییات مربوط به هرکدام از تراکنشها را انتخاب کند
+\item سامانه صفحه جزییات مربوط به تراکنش انتخابی شامل وضعیت بررسی تراکنش، کارمند مربوط به تراکنش، نام و مقدار هزینه تراکنش، اطلاعات اضافی، فایلهای آپلود شده و نظر کارمند موردنظر را نمایش میدهد.
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+ندارد
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+\begin{itemize}
+\item \textbf{مورد کاربرد:}\\
+تعیین روش اطلاع رسانی به مشتری
+\item \textbf{شناسه:}\\
+19
+\item \textbf{توضیح اجمالی:}\\
+کاربر نحوه اطلاع رسانی بخود را مشخص میکند
+\item \textbf{کنشگر اصلی:}\\
+مشتری
+\item \textbf{کنشگر فرعی:}\\
+ندارد
+\item \textbf{شرایط اولیه:}\\
+کاربر وارد داشبورد مشتری شده باشد.
+\item \textbf{روند اصلی:}\\
+\begin{enumerate}
+\item  این مورد کاربرد با درخواست کاربر برای تعیین روش اطلاع رسانی در داشبورد شروع میشود
+\item سامانه صفحه انتخاب روش اطلاع رسانی را به کاربر نمایش میدهد
+\item کاربر یکی از دو گزینه اطلاع رسانی با پیامک و اطلاع رسانی با ایمیل را انتخاب میکند.
+\item  سامانه پیغام «انتخاب روش اطلاع رسانی موفق» را نمایش میدهد.
+\end{enumerate}
+\item \textbf{شرایط پایانی:}\\ 
+در (دیتابیس) سامانه روش اطلاع رسانی مربوط به کاربر با توجه به روش انتخابی اش ذخیره شود.
+\item \textbf{روندهای جایگزین:}\\
+ندارد
+\end{itemize}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
 \end{document}
